--- a/pythonExcel.ipynb
+++ b/pythonExcel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5wh1t9wbcnNO9tVuTN7G7",
+      "authorship_tag": "ABX9TyMbWC61A6WbEOura/ImM+O/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +99,7 @@
         "id": "Ohcs-dr4MBaV",
         "outputId": "ea6a7644-333c-41e2-dacf-7aad8ff2eb9b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "id": "SwS-TjF5M8vM",
         "outputId": "87b1101d-68f7-4020-d89f-7e204cb1a2a2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
         "id": "Hb0GeV8oN5ed",
         "outputId": "b4cd344c-c41c-4bac-c43e-89e1acc78556"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
         "id": "hMWlP2COPMaa",
         "outputId": "39b0cd2e-0117-4c91-ced4-f94b31629c5a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,12 +267,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 339
+          "height": 411
         },
         "id": "UtZue7V-QrrJ",
         "outputId": "01fec7cf-b7a4-43e2-e003-99eb2534e38f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +355,7 @@
         "id": "8omDtF1bS08z",
         "outputId": "16cf750a-d8a4-43b9-e096-7d7a41c933aa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
         "id": "nFm7bnSYY2J7",
         "outputId": "2abba607-471d-48fa-bd15-1939b860912c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,395 @@
         "id": "R5T_mcJQbiab",
         "outputId": "005c66c5-0348-4aba-dcf1-93b69a48553f"
       },
-      "execution_count": 21,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PIE CHART\n",
+        "\n",
+        "from openpyxl import Workbook\n",
+        "from openpyxl.chart import PieChart, Reference\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "\n",
+        "wb= Workbook()\n",
+        "destination_filename = \"pie_chart.xlsx\"\n",
+        "\n",
+        "sheet = wb.active\n",
+        "sheet.title = \"Pie Chart Worksheet\"\n",
+        "\n",
+        "chart_values = [\n",
+        "                [\"Products\"       , \"Sales\"],\n",
+        "                [\"Amazon jungle\"  , 1000],\n",
+        "                [\"Ninja Turtle\"   , 90000],\n",
+        "                [\"Mobile Legend\"  , 800000]\n",
+        "]\n",
+        "\n",
+        "pieChartObject = PieChart()\n",
+        "\n",
+        "for row in chart_values:\n",
+        "  sheet.append(row)\n",
+        "\n",
+        "labels_reference = Reference(sheet,\n",
+        "                             min_row = 2,\n",
+        "                             min_col = 1,\n",
+        "                             max_row = 4,\n",
+        "                             max_col = 1)\n",
+        "\n",
+        "values_reference = Reference(sheet,\n",
+        "                             min_row = 2,\n",
+        "                             min_col = 2,\n",
+        "                             max_row = 4,\n",
+        "                             max_col = 2)\n",
+        "\n",
+        "\n",
+        "pieChartObject.add_data(values_reference)\n",
+        "pieChartObject.set_categories(labels_reference)\n",
+        "sheet.add_chart(pieChartObject, \"E1\")\n",
+        "\n",
+        "wb.save(\"/content/gdrive/My Drive/\" + destination_filename)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQCHElX9Okns",
+        "outputId": "6ce2cfed-c3c3-464f-b9a3-ac63c5175792"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# AREA CHART\n",
+        "\n",
+        "from openpyxl import Workbook\n",
+        "from openpyxl.chart import AreaChart, Reference\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "\n",
+        "wb= Workbook()\n",
+        "destination_filename = \"area_chart.xlsx\"\n",
+        "\n",
+        "sheet = wb.active\n",
+        "sheet.title = \"Area Chart Worksheet\"\n",
+        "\n",
+        "\n",
+        "chart_values = [\n",
+        "                [\"Employee Number\", \"Sales\", \"Hours\"],\n",
+        "                [1, 10000, 212],\n",
+        "                [2, 32323, 324],\n",
+        "                [3, 32323, 433],\n",
+        "                [4, 45433, 539]\n",
+        "]\n",
+        "\n",
+        "for row in chart_values:\n",
+        "  sheet.append(row)\n",
+        "\n",
+        "areaChartObject = AreaChart()\n",
+        "\n",
+        "labels_reference = Reference(sheet,\n",
+        "                             min_row = 1,\n",
+        "                             min_col = 1,\n",
+        "                             max_row = 5,\n",
+        "                             max_col = 3)\n",
+        "\n",
+        "values_reference = Reference(sheet,\n",
+        "                             min_row = 1,\n",
+        "                             min_col = 2,\n",
+        "                             max_row = 5,\n",
+        "                             max_col = 3)\n",
+        "\n",
+        "areaChartObject.add_data(values_reference)\n",
+        "areaChartObject.set_categories(labels_reference)\n",
+        "\n",
+        "sheet.add_chart(areaChartObject, \"E1\")\n",
+        "\n",
+        "\n",
+        "wb.save(\"/content/gdrive/My Drive/\" + destination_filename)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nc6JglpRTHJ7",
+        "outputId": "e0fff808-1b4a-439a-c440-c6bef13d912b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import openpyxl\n",
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "import pprint\n",
+        "wb = openpyxl.load_workbook(\"/content/gdrive/My drive/\" +\n",
+        "                           \"customer_information.xlsx\")\n",
+        "\n",
+        "sheet         = wb[\"Sheet1\"]\n",
+        "customer_data = {}\n",
+        "\n",
+        "for row in range(2, sheet.max_row + 1):\n",
+        "  customer = sheet[\"A\" + str(row)].value\n",
+        "  state    = sheet[\"B\" + str(row)].value\n",
+        "  country  = sheet[\"C\" + str(row)].value\n",
+        "  sales    = sheet[\"D\" + str(row)].value\n",
+        "\n",
+        "  customer_data.setdefault(state, {})\n",
+        "  customer_data[state].setdefault(country, {\"customer\":0,\n",
+        "                                            \"sales\":0})\n",
+        "  customer_data[state][country][\"customer\"] += 1\n",
+        "  customer_data[state][country][\"sales\"]    += int(sales)\n",
+        "\n",
+        "  text_file = open(\"/content/gdrive/My Drive/\" +\n",
+        "                   \"customer_data.txt\", \"w\")\n",
+        "\n",
+        "  text_file.write(pprint.pformat(customer_data))\n",
+        "\n",
+        "  text_file.close()"
+      ],
+      "metadata": {
+        "id": "0RtV18JXVs-S",
+        "collapsed": true
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from openpyxl import Workbook\n",
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "from openpyxl.chart import StockChart, Reference\n",
+        "\n",
+        "destination_filename = \"stock_chart.xlsx\"\n",
+        "\n",
+        "wb = Workbook()\n",
+        "sheet = wb.active\n",
+        "sheet.title = \"Stock Chart\"\n",
+        "\n",
+        "chart_values = [\n",
+        "    [\"Date\", \"Volume\", \"Start\", \"Max\", \"Min\", \"End\"],\n",
+        "    [\"2025-09-09\", 10000, 10, 12, 8, 11],\n",
+        "    [\"2025-09-10\", 12000, 9, 12, 3, 10],\n",
+        "    [\"2025-09-11\", 12000, 9, 12, 3, 10],\n",
+        "]\n",
+        "for row in chart_values:\n",
+        "  sheet.append(row)\n",
+        "\n",
+        "stockChartObject = StockChart()\n",
+        "labels_reference = Reference(sheet,\n",
+        "                             min_row = 2,\n",
+        "                             min_col = 1,\n",
+        "                             max_row = 4)\n",
+        "values_reference = Reference(sheet,\n",
+        "                             min_row = 1,\n",
+        "                             min_col=4,\n",
+        "                             max_row=4,\n",
+        "                             max_col=6)\n",
+        "stockChartObject.add_data(values_reference)\n",
+        "stockChartObject.set_categories(labels_reference)\n",
+        "\n",
+        "sheet.add_chart(stockChartObject, \"B11\")\n",
+        "\n",
+        "wb.save(\"/content/gdrive/My Drive/\" + \"stock_chart.xlsx\")"
+      ],
+      "metadata": {
+        "id": "DU57wvqn9TDj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0e54c51e-6c3f-4afd-a1da-8ecdb4c6a76d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from openpyxl import Workbook\n",
+        "from google.colab import drive\n",
+        "from openpyxl.chart import DoughnutChart, Reference\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "\n",
+        "# File name\n",
+        "destination_filename = \"doughnut_chart.xlsx\"\n",
+        "\n",
+        "# Create workbook and sheet\n",
+        "wb = Workbook()\n",
+        "sheet = wb.active\n",
+        "sheet.title = \"Doughnut Chart\"\n",
+        "\n",
+        "# Sample data\n",
+        "chart_values = [\n",
+        "    [\"Category\", \"Values\"],\n",
+        "    [\"Apples\", 50],\n",
+        "    [\"Bananas\", 30],\n",
+        "    [\"Cherries\", 20],\n",
+        "]\n",
+        "\n",
+        "for row in chart_values:\n",
+        "    sheet.append(row)\n",
+        "\n",
+        "# Create Doughnut Chart\n",
+        "doughnutChartObject = DoughnutChart()\n",
+        "\n",
+        "# Add data (skip header row)\n",
+        "values_reference = Reference(sheet,\n",
+        "                             min_col=2,\n",
+        "                             min_row=2,\n",
+        "                             max_row=4)\n",
+        "doughnutChartObject.add_data(values_reference,\n",
+        "                             titles_from_data=False)\n",
+        "\n",
+        "# Add categories (the labels)\n",
+        "labels_reference = Reference(sheet,\n",
+        "                             min_col=1,\n",
+        "                             min_row=2,\n",
+        "                             max_row=4)\n",
+        "doughnutChartObject.set_categories(labels_reference)\n",
+        "\n",
+        "# Optional: title\n",
+        "doughnutChartObject.title = \"Fruit Distribution\"\n",
+        "\n",
+        "# Add chart to sheet\n",
+        "sheet.add_chart(doughnutChartObject, \"D7\")\n",
+        "\n",
+        "# Save file in Google Drive\n",
+        "wb.save(\"/content/gdrive/My Drive/\" + destination_filename)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IalnGTCeFa29",
+        "outputId": "0d04029d-3d76-4f7d-c9b7-e68ec0abb247"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from openpyxl import Workbook\n",
+        "from google.colab import drive\n",
+        "from openpyxl.chart import BubbleChart, Reference, Series\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount(\"/content/gdrive\")\n",
+        "\n",
+        "# File name\n",
+        "destination_filename = \"bubble_chart.xlsx\"\n",
+        "\n",
+        "# Create workbook and sheet\n",
+        "wb = Workbook()\n",
+        "sheet = wb.active\n",
+        "sheet.title = \"Bubble Chart\"\n",
+        "\n",
+        "# Sample data\n",
+        "# X = column 1, Y = column 2, Bubble size = column 3\n",
+        "chart_values = [\n",
+        "    [\"X\", \"Y\", \"Size\"],\n",
+        "    [10, 20, 5],\n",
+        "    [15, 25, 10],\n",
+        "    [20, 30, 15],\n",
+        "    [25, 10, 20],\n",
+        "    [30, 40, 25],\n",
+        "]\n",
+        "\n",
+        "for row in chart_values:\n",
+        "    sheet.append(row)\n",
+        "\n",
+        "# Create Bubble Chart\n",
+        "bubbleChartObject = BubbleChart()\n",
+        "\n",
+        "# X values\n",
+        "x_values = Reference(sheet,\n",
+        "                     min_col=1,\n",
+        "                     min_row=2,\n",
+        "                     max_row=6)\n",
+        "# Y values\n",
+        "y_values = Reference(sheet,\n",
+        "                     min_col=2,\n",
+        "                     min_row=2,\n",
+        "                     max_row=6)\n",
+        "# Bubble sizes\n",
+        "size_values = Reference(sheet,\n",
+        "                        min_col=3,\n",
+        "                        min_row=2,\n",
+        "                        max_row=6)\n",
+        "\n",
+        "# Add series (X, Y, Size)\n",
+        "series = Series(y_values, x_values, size_values, title=\"Data Points\")\n",
+        "bubbleChartObject.series.append(series)\n",
+        "\n",
+        "# Optional title\n",
+        "bubbleChartObject.title = \"Bubble Chart Example\"\n",
+        "\n",
+        "# Add chart to sheet\n",
+        "sheet.add_chart(bubbleChartObject, \"E7\")\n",
+        "\n",
+        "# Save file in Google Drive\n",
+        "wb.save(\"/content/gdrive/My Drive/\" + destination_filename)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0KLFXcy4F7pT",
+        "outputId": "1e77785c-9d1c-4130-c9ea-c5fb07b815fe"
+      },
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
